# xmp

./: CMakeLists.txt  Config.cmake.in
XMPCore/: CMakeLists.txt
XMPFiles/: CMakeLists.txt
