cmake_minimum_required(VERSION 3.28)
project("xmp" LANGUAGES C CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if (APPLE)
    if (APPLE_IOS)
        set(XMP_PLATFORM_SHORT "ios")
        add_definitions("-DIOS_ENV=1")
    else ()
        set(XMP_PLATFORM_SHORT "mac")
        add_definitions("-DMAC_ENV=1")
    endif()
elseif (ANDROID)
    set(XMP_PLATFORM_SHORT "android")
    add_definitions("-DANDROID_ENV=1")
elseif (UNIX)
    set(XMP_PLATFORM_SHORT "linux")
    add_definitions("-DUNIX_ENV=1")
elseif (WIN32)
    set(XMP_PLATFORM_SHORT "win")
    add_definitions("-DWIN_ENV=1")
endif()
set(XMPROOT_DIR ${CMAKE_CURRENT_SOURCE_DIR})

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/XMPCore)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/XMPFiles)
